--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,9 +1,44 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Tab Two
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content></ion-content>
+    <ion-toolbar>
+      <ion-title>
+        JOGADOR
+      </ion-title>
+    </ion-toolbar>
+  </ion-header>
+  
+  <ion-content><!-- Default Input -->
+    <ion-input></ion-input>
+    
+    <!-- Input with value -->
+    <ion-input value="Primeiro nome"></ion-input>
+    
+    <!-- Input with placeholder -->
+    <ion-input placeholder="Insira seu nome"></ion-input>
+    
+    <!-- Input with clear button when there is a value -->
+    <ion-input clearInput value="Sobrenome"></ion-input>
+    
+    <!-- Number type input -->
+    <ion-input placeholder="Insira seu sobrneome"></ion-input>
+    
+    <ion-content>
+       
+        <!-- fab placed to the (vertical) center and end -->
+        <ion-fab vertical="buttom" horizontal="end" slot="fixed">
+          <ion-fab-button color="danger" routerLink="/tabs/addjogador">
+            <ion-icon name="add"></ion-icon>
+          </ion-fab-button>
+        </ion-fab>
+      
+        
+      </ion-content>
+  
+    <ion-item>
+  
+  
+  
+  
+      
+      <ion-input></ion-input>
+    </ion-item></ion-content>
+  
