--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -74,4 +74,12 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+/** Gamer **/
+--ion-color-gamer: #f529d6;
+--ion-color-gamer-rgb: 244, 244, 244;
+--ion-color-gamer-contrast: #000000;
+--ion-color-gamer-contrast-rgb: 0, 0, 0;
+--ion-color-gamer-shade: #3cfad8;
+--ion-color-gamer-tint: #3cfad8;
 }
