--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -2,43 +2,24 @@
     <ion-toolbar>
       <ion-title>
         JOGADOR
+        <ion-icon name="logo-ionitron"></ion-icon>
       </ion-title>
     </ion-toolbar>
   </ion-header>
   
-  <ion-content><!-- Default Input -->
-    <ion-input></ion-input>
+  <ion-content>
     
-    <!-- Input with value -->
-    <ion-input value="Primeiro nome"></ion-input>
     
-    <!-- Input with placeholder -->
-    <ion-input placeholder="Insira seu nome"></ion-input>
-    
-    <!-- Input with clear button when there is a value -->
-    <ion-input clearInput value="Sobrenome"></ion-input>
-    
-    <!-- Number type input -->
-    <ion-input placeholder="Insira seu sobrneome"></ion-input>
-    
+
     <ion-content>
-       
         <!-- fab placed to the (vertical) center and end -->
-        <ion-fab vertical="buttom" horizontal="end" slot="fixed">
+        <ion-fab vertical="bottom" horizontal="end" slot="fixed">
           <ion-fab-button color="danger" routerLink="/tabs/addjogador">
             <ion-icon name="add"></ion-icon>
           </ion-fab-button>
         </ion-fab>
-      
-        
       </ion-content>
   
-    <ion-item>
-  
-  
-  
-  
-      
       <ion-input></ion-input>
-    </ion-item></ion-content>
+     </ion-content>
   
