--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -6,7 +6,7 @@
       <ion-label>início</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
+    <ion-tab-button tab="listJogador">
       <ion-icon name="logo-game-controller-b"></ion-icon>
       <ion-label>jogador</ion-label>
     </ion-tab-button>
