--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -11,9 +11,9 @@
       <ion-label>jogador</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
-      <ion-icon name="send"></ion-icon>
-      <ion-label>Tab Three</ion-label>
+    <ion-tab-button tab="listGame">
+      <ion-icon name="logo-game-controller-a"></ion-icon>
+      <ion-label>Adicionar jogo</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
