--- a/src/app/pages/add-jogador/add-jogador.page.scss
+++ b/src/app/pages/add-jogador/add-jogador.page.scss
@@ -7,3 +7,9 @@ ion-toolbar{
 
     --ion-background-color:rgb(42, 156, 48);
 }
+
+.foto img{
+    width: 70%;
+    border-radius: 25%;
+    margin: 20px auto;
+}
