--- a/src/app/pages/list-jogador/list-jogador.page.html
+++ b/src/app/pages/list-jogador/list-jogador.page.html
@@ -8,7 +8,7 @@
   
   <ion-content>
     <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-      <ion-fab-button color="danger" routerLink="/tabs/addJogador">
+      <ion-fab-button color="danger" routerLink="/tabs/addjogador">
         <ion-icon name="add"></ion-icon>
       </ion-fab-button>
     </ion-fab>
