--- a/src/app/pages/perfil-jogador/perfil-jogador.page.html
+++ b/src/app/pages/perfil-jogador/perfil-jogador.page.html
@@ -7,7 +7,8 @@
 <ion-content>
 
   <ion-item lines="none">
-    <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y">
+    <img [src]="jogador.foto">
+    <!-- <img src= "{{jogador.foto}}"> -->
   </ion-item>
 
 
