--- a/src/app/pages/list-game/list-game.page.html
+++ b/src/app/pages/list-game/list-game.page.html
@@ -1,48 +1,52 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      <ion-icon name="logo-xbox"></ion-icon>
-      Games
-      <ion-icon name="logo-playstation"></ion-icon>
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-
-  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
-    <ion-refresher-content
-      pullingIcon="arrow-dropdown"
-      pullingText="Pull to refresh"
-      refreshingSpinner="circles"
-      refreshingText="Atualizando...">
-    </ion-refresher-content>
-  </ion-refresher>
-
+    <ion-toolbar>
+      <ion-title>
+        Games
+      </ion-title>
+      <ion-icon name="contact" slot="end" size="large" routerLink="/login" style=margin-right:20px;></ion-icon>
+    </ion-toolbar>
+  </ion-header>
   
-
   <ion-content>
-      <!-- fab placed to the (vertical) center and end -->
-      <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-        <ion-fab-button color="blue" routerLink="/tabs/addgame">
-          <ion-icon name="add"></ion-icon>
-        </ion-fab-button>
-      </ion-fab>
+    <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+      <ion-fab-button color="danger" routerLink="/tabs/addGame">
+        <ion-icon name="add"></ion-icon>
+      </ion-fab-button>
+    </ion-fab>
+  
+    <ion-list *ngIf="games">
 
-<ion-card *ngIf = "games">
-  <ion-item *ngFor= "let g of games" routerLink="/tabs/perfilGame/{{g.key}}">
-    <ion-avatar slot="start">
-      <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y">
-    </ion-avatar>
-    <ion-label>{{ g.nome }}</ion-label>
-    <ion-text>{{ g.console }}  <ion-icon name="logo-playstation"></ion-icon> / <ion-icon name="logo-xbox"></ion-icon>
-
-    </ion-text>
+        <ion-item-sliding *ngFor="let u of games">
+            <ion-item-options side="start">
+              <ion-item-option (click)="editar(u)" expandable>
+                Editar
+              </ion-item-option>
+            </ion-item-options> 
 
 
-  </ion-item>
-  </ion-card>
+      <ion-item  routerLink="/tabs/perfilGame/{{u.key}}">
+        <ion-avatar slot="start">
+          <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y">
+        </ion-avatar>
+        <ion-label>nome: {{ u.nome }}</ion-label>
+        <ion-text>valor: {{ u.valor }}</ion-text>
+      </ion-item>
+ 
 
-    </ion-content>
-
-   </ion-content>
+    <ion-item-options side="end">
+        <ion-item-option (click)="apagar(u)" color="danger" expandable>
+          Deletar
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+  
+    <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+      <ion-refresher-content
+        pullingIcon="arrow-dropdown"
+        pullingText="Pull to refresh"
+        refreshingSpinner="circles"
+        refreshingText="Refreshing...">
+      </ion-refresher-content>
+    </ion-refresher>
+  
+  <ion-content>
