--- a/src/app/pages/perfil-game/perfil-game.page.html
+++ b/src/app/pages/perfil-game/perfil-game.page.html
@@ -22,7 +22,20 @@
     <p> Valor: {{game.valor}}</p>
       </ion-text>
 
-
+      <ion-slides>
+          <ion-slide>
+              <img src="https://images-americanas.b2w.io/produtos/01/00/offers/01/00/item/133799/8/133799830_1GG.png">
+          </ion-slide>
+        
+          <ion-slide style= "background:pink">
+              <h1>slide-2</h1>
+            </ion-slide>
+        
+        
+            <ion-slide style= "background:purple">
+                <h1>slide-3</h1>
+              </ion-slide>
+            </ion-slides>
       
   </ion-item>
 </ion-content>
