--- a/src/app/pages/add-game/add-game.page.html
+++ b/src/app/pages/add-game/add-game.page.html
@@ -8,6 +8,11 @@
 <ion-content>
 
 <form #fc="ngForm" (ngSubmit) = "onsubmit(fc)">
+        <ion-item lines="none" class="foto">
+                <img src="assets/perfil.png" alt="foto do perfil" (click)="tirarFoto()" *ngIf="!preview">
+                <img [src]="preview" alt="foto perfil" (click) = "tirarFoto()" *ngIf="preview">
+                </ion-item>
+
       <ion-item>
           <ion-label position="floating">Nome</ion-label>
           <ion-input type="text" [(ngModel)] = "game.nome" name="nome" required ></ion-input>
@@ -19,13 +24,10 @@
       </ion-item>
 
       <ion-item>
-            <ion-label>Console</ion-label>
-            <ion-select placeholder="Selecione um console">
-              <ion-select-option value="X-box">X-box</ion-select-option>
-              <ion-select-option value="Playstation">Playstation</ion-select-option>
-            </ion-select>
-          </ion-item>
-        
+          <ion-label position="floating">Console</ion-label>
+         <ion-input type="text" [(ngModel)] = "game.console" name="console" required ></ion-input> 
+
+      </ion-item>
 
       <ion-item>
           <ion-label position="floating">Descricao</ion-label>
