--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -14,6 +14,7 @@
 
     <ion-tab-button tab="listGame">
       <ion-icon name="logo-game-controller-a"></ion-icon>
+      <ion-badge color="danger" *ngIf="quantgame">{{quantgame}}</ion-badge>
       <ion-label>Adicionar jogo</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
