--- a/src/app/pages/add-player/add-player.page.html
+++ b/src/app/pages/add-player/add-player.page.html
@@ -54,4 +54,9 @@
       <ion-button type="reset" color="danger">Cancelar</ion-button>
     </ion-item>
   </form>
+
+  <ion-content padding>
+    <div class="map" id="map_canvas"></div>
+  </ion-content>
+  
 </ion-content>
